basic-launchbar-config: personalized launchbar. Context menu on icons on launchbar and start menu to pin/unpin. Can drag 'pinned' icons. Icons appended to launchbar for running unpinned plugins
Signed-off-by: Robert Penny <rpenny@rocketsoftware.com>

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/desktop/desktop.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/desktop/desktop.component.html
@@ -10,6 +10,10 @@
   Copyright Contributors to the Zowe Project.
 -->
 
+<ng-container *ngIf="contextMenuDef != null">
+  <com-rs-mvd-context-menu [xPos]="contextMenuDef.xPos" [yPos]="contextMenuDef.yPos" [menuItems]="contextMenuDef.items" (complete)="closeContextMenu()"></com-rs-mvd-context-menu>
+</ng-container>
+
 <rs-com-window-pane></rs-com-window-pane>
 <rs-com-launchbar></rs-com-launchbar>
 
