POC Commit: rough test widgets. REMOVE SOON
Added some (very) rough test widgets for calling the services
to change language to French and then back to the browser default.

These rough test widgets should be replaced by a real language chooser.

Signed-off-by: Robert Penny <rpenny@rocketsoftware.com>
Signed-off-by: Suneeth Keerthy <skeerthy@rocketsoftware.com>

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.html
@@ -21,9 +21,11 @@
 </div>
 
 <div class="launchbar-user-popup" [class.hidden]="!popupVisible">
-  <h5>{{getUsername()}}</h5>
-  <br>
-  <button #logoutbutton class="btn btn-primary" (click)="logout()">Sign Out</button>
+  <h5 class="launchbar-username">{{getUsername()}}</h5>
+  <button #logoutbutton class="btn btn-primary launchbar-button" (click)="logout()">Sign Out</button>
+  <button #languagebutton class="btn btn-primary launchbar-button" (click)="setPreference('language', 'fr')">Language</button>
+  <button #clearlanguagebutton class="btn btn-primary launchbar-button" (click)="setPreference('language', null)">Clear Language</button>
+  <button #localebutton class="btn btn-primary launchbar-button" (click)="setPreference('locale', 'US')">Locale</button>
 </div>
 
 <!-- 
