--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar/launchbar.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar/launchbar.component.html
@@ -1,5 +1,4 @@
 
-
 <!-- 
   This program and the accompanying materials are
   made available under the terms of the Eclipse Public License v2.0 which accompanies
@@ -9,7 +8,6 @@
   
   Copyright Contributors to the Zowe Project.
 -->
-
 <div class="launchbar-container" id="container" [class.active]="isActive" (mousedown)="onMouseDownContainer($event)" (mousemove)="onMouseMoveContainer($event)" (mouseup)="onMouseUpContainer($event)">
   <rs-com-launchbar-menu [menuItems]="allItems" (itemClicked)="menuItemClicked($event)"  (menuStateChanged)="onStateChanged($event)"></rs-com-launchbar-menu>
   <div class="launchbar">
@@ -20,6 +18,7 @@
     (mousedown)="onMouseDown($event, item)">
     </rs-com-launchbar-icon>
   </div>
+  <rs-com-launchbar-notifications></rs-com-launchbar-notifications>
   <rs-com-launchbar-widget (popupStateChanged)="onStateChanged($event)"></rs-com-launchbar-widget>
   <div class="launchbar-basement"></div>
 </div>
@@ -33,4 +32,3 @@
   
   Copyright Contributors to the Zowe Project.
 -->
-
