--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-icon/launchbar-icon.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-icon/launchbar-icon.component.html
@@ -9,10 +9,21 @@
   
   Copyright Contributors to the Zowe Project.
 -->
-
-<div class="launchbar-icon" (click)="clicked()" [title]="launchbarItem.label" [style.background-image]="launchbarItem.image == null ? undefined : launchbarItem.image | cssUrl">
-  <p class="launchbar-caption truncate">{{launchbarItem.label}}</p>
-  <div class="launchbar-icon-marker"  [ngClass]="{'running': isRunning()}"></div>
+<div class="launchbar-icon">
+<p *ngIf="titleVisible" class="launchbar-caption truncate">{{launchbarItem.label}}</p>
+<div class="launchbar-icon-image" (click)="clicked()" (mouseenter)="onMouseEnter($event, item)" (mouseleave)="onMouseLeave($event, item)" [title]="launchbarItem.label" [style.background-image]="launchbarItem.image == null ? undefined : launchbarItem.image | cssUrl">
+  <div class="launchbar-icon-marker-dots" *ngIf="launchbarItem.instanceCount <= 5">
+    <div class="launchbar-icon-marker-dot" *ngFor="let i of launchbarItem.instanceIdArray"></div>
+  </div>
+  <div class="launchbar-icon-marker-dots" *ngIf="launchbarItem.instanceCount > 5">
+    <div class="launchbar-icon-marker-dot"></div> <!-- 5 dots, plus a + symbol -->
+    <div class="launchbar-icon-marker-dot"></div>
+    <div class="launchbar-icon-marker-dot"></div>
+    <div class="launchbar-icon-marker-dot"></div>
+    <div class="launchbar-icon-marker-dot"></div>
+    <div class="launchbar-icon-marker-more">+</div>
+  </div>
+</div>
 </div>
 
 <!-- 
