--- a/virtual-desktop/src/app/application-manager/load-failure/load-failure.component.html
+++ b/virtual-desktop/src/app/application-manager/load-failure/load-failure.component.html
@@ -1,17 +1,17 @@
 
 
-<!-- 
+<!--
   This program and the accompanying materials are
   made available under the terms of the Eclipse Public License v2.0 which accompanies
   this distribution, and is available at https://www.eclipse.org/legal/epl-v20.html
-  
+
   SPDX-License-Identifier: EPL-2.0
-  
+
   Copyright Contributors to the Zowe Project.
 -->
 
 <h1>?</h1>
-<div class="title">The plugin failed to load</div>
+<div class="title" i18n="message|Message when plugin failed to load@@plugin-loading-failed-message">The plugin failed to load</div>
 <br/>
 <div class="contents">
   <ul>
@@ -21,13 +21,13 @@
   </ul>
 </div>
 
-<!-- 
+<!--
   This program and the accompanying materials are
   made available under the terms of the Eclipse Public License v2.0 which accompanies
   this distribution, and is available at https://www.eclipse.org/legal/epl-v20.html
-  
+
   SPDX-License-Identifier: EPL-2.0
-  
+
   Copyright Contributors to the Zowe Project.
 -->
 
