--- a/system-apps/app-prop-viewer/webClient/src/app/app.component.css
+++ b/system-apps/app-prop-viewer/webClient/src/app/app.component.css
@@ -23,16 +23,16 @@
 
  
 .icon {
-  display: inline-block;
-  box-sizing: border-box;
+   display:inline-block;
+    
   position: relative;
-  width: 60px;
-  height: 60px;
+  width: 80px;
+  height: 80px;
   background-image: url('../assets/missing.png');
-  background-size: 60px 60px;
-  margin-top: 22px;
-  margin-left: 30px;
-  margin-right: 30px;
+  background-size: 80px 80px;
+  margin-top: 40px;
+  margin-left: 20px;
+  margin-right: 20px;
   user-select: none;
   padding: 0;
   -ms-user-select: none;
@@ -41,11 +41,12 @@
   background-repeat: no-repeat;
   background-position-y: 0;
   background-position-x: center;
-   z-index: 7;
+ 
+    z-index: 7;
 }
 
 .window {
-  position: absolute;
+  position: relative;
  
   margin: 0;
   padding: 0;
@@ -56,8 +57,8 @@
   border: 1px solid transparent;
   border-radius: 6px 6px 0 0;
   z-index: 1;
-  min-width: 180px;
-  min-height: 90px;
+  min-width: 100%;
+  min-height: 100%;
   width:100%;
   height:100%;
   
@@ -72,14 +73,11 @@
   min-width: 100px;
   min-height: 40px;
   width:100%;
-  height:50%;
+  height:70%;
   
 }
  
  
-.title {
-  text-align: center;
-}
  
 .window .caption {
   font-family: 'Roboto';
@@ -109,22 +107,46 @@
    border-top: 1px solid #D3D3D3	;
 }
  
+ 
+#row{
+    display:flex;
+    flex-direction:row;
+justify-content: space-around;
+}
+
+#column1{
+    display:flex;
+    flex-direction:column;
+    width:40%
+}
+
+
+#column2{
+    display:flex;
+    flex-direction:column;
+     width:60%
+}
+
+
 .app-name {
   font-weight: bold;
-    text-align: center;
+  font-size:1.5em;
+  margin-top: 1.5em;
  }
 
-.app-value {
-  padding-left: 20px;
-  text-indent: -20px;
-    text-align: center;
+ 
+ .constant {
+  font-weight: normal;
+
+  margin-top: 1.2em;
  }
  
-.more-info {
-  padding-left: 20px;
-  text-indent: -20px;
-  text-align: center;
+.app-value {
+  margin-top: 1.2em;
+  font-weight: bold;
+
  }
+ 
  
 .window .border-box-sizing {
   box-sizing: border-box;
