--- a/system-apps/app-prop-viewer/webClient/src/app/app.component.html
+++ b/system-apps/app-prop-viewer/webClient/src/app/app.component.html
@@ -32,7 +32,9 @@
        </div> 
   </div>
       <hr>
-
+    <p class="copyright">
+       {{copyright}}
+      </p>
 </div>
 <!-- 
   This program and the accompanying materials are
