Show Zowe version on Log in page/Log out pop-up. "Sign Out" --> "Log out" and "Login" --> "Log in"
Signed-off-by: Leanid Astrakou <lastrakou@rocketsoftware.com>

--- a/virtual-desktop/src/app/authentication-manager/login/login.component.css
+++ b/virtual-desktop/src/app/authentication-manager/login/login.component.css
@@ -129,6 +129,12 @@
   color: #474747;
 }
 
+.login-plugin-version {
+  font-family: 'Roboto';
+  font-size: 16px;
+  color: #47474785;
+}
+
 .login-click-blocker {
   position: fixed;
   height: 100%;
