--- a/virtual-desktop/src/app/authentication-manager/login/login.component.html
+++ b/virtual-desktop/src/app/authentication-manager/login/login.component.html
@@ -34,7 +34,9 @@
             [disabled]="locked">
       <span class="login-button-icon"></span>
       <br>
-      <span class="login-label" i18n="button title|Title of Login button@@login-button-title">Login</span>
+      <span class="login-label" i18n="button title|Title of Login button@@login-button-title">Log in</span>
+      <br><br>
+      <span class="login-plugin-version">{{getPluginVersion()}}</span>
     </button>
   </div>
   </div>
