--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-instance-view/launchbar-instance-view.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-instance-view/launchbar-instance-view.component.css
@@ -1,6 +1,6 @@
 .instance-item {
-    width: 100px;
-    height: 100%;
+    width: 200px;
+    height: 120px;
     margin-left: 5px;
     margin-right: 5px;
     margin-top: 5px;
@@ -34,4 +34,10 @@
 
 .instance-snapshot {
 
+}
+
+.instance-preview {
+    width: 200px;
+    height: 120px;
+    margin-top: -34px;
 }
