--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-icon/launchbar-icon.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-icon/launchbar-icon.component.css
@@ -10,19 +10,11 @@
   Copyright Contributors to the Zowe Project.
 */
 
-.launchbar-icon.active {
-  background-position-y: 0px;
-}
-
 .launchbar-icon {
   display: inline-block;
   box-sizing: border-box;
   position: relative;
-  width: 60px;
-  height: 60px;
-  background-image: url('../../../../../assets/images/launchbar/missing.png');
-  background-size: 60px 60px;
-  margin-top: 22px;
+  margin-top: 35px;
   margin-left: 5px;
   margin-right: 5px;
   user-select: none;
@@ -30,11 +22,30 @@
   -ms-user-select: none;
   -moz-user-select: none;
   -webkit-user-select: none;
+  z-index: 7;
+}
+
+
+.launchbar-icon-image.active {
+  background-position-y: 0px;
+}
+
+.launchbar-icon-image {
+  display: inline-block;
+  box-sizing: border-box;
+  position: relative;
+  width: 60px;
+  height: 60px;
+  background-image: url('../../../../../assets/images/launchbar/missing.png');
+  background-size: 60px 60px;
+  user-select: none;
+  -ms-user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
   background-repeat: no-repeat;
   background-position-y: 0;
   background-position-x: center;
   cursor: pointer;
-  z-index: 7;
 }
 
 .launchbar-caption {
@@ -43,13 +54,14 @@
   width: 60px;
   color: white;
   font-size: 8pt;
-  top: 62px;
+  bottom: 55px;
   left: 0;
   line-height: 120%;
+  z-index: 7;
 }
 
 .launchbar-icon-marker {
-  margin-bottom: -32px;
+  margin-bottom: -17px;
   padding: 0;
   position: absolute;
   width: 100%;
@@ -61,6 +73,34 @@
 .launchbar-icon-marker.running {
   background: #6de2ff
 }
+
+.launchbar-icon-marker-dots {
+  margin-bottom: -17px;
+  padding: 0;
+  position: absolute;
+  width: 100%;
+  bottom: 2px;
+}
+
+
+.launchbar-icon-marker-dot {
+  border-radius: 50%;
+  display: inline-block;
+  height: 5px;
+  width: 5px;
+  margin: 2px;
+  background-color: #6de2ff;
+}
+
+.launchbar-icon-marker-more {
+  display: inline-block;
+  height: 5px;
+  width: 5px;
+  margin: 2px;
+  color: #6de2ff;
+  font-size: 8pt;
+}
+
 
 /* SB */
 .launchbar-icon-marker.running.running-multiple {
