--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-menu-item/launchbar-menu-item.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-menu-item/launchbar-menu-item.component.css
@@ -1,6 +1,4 @@
-
-
-<!--
+/*
   This program and the accompanying materials are
   made available under the terms of the Eclipse Public License v2.0 which accompanies
   this distribution, and is available at https://www.eclipse.org/legal/epl-v20.html
@@ -8,22 +6,39 @@
   SPDX-License-Identifier: EPL-2.0
 
   Copyright Contributors to the Zowe Project.
--->
+*/
 
-<div class="launch-widget">
-  <div class="launchbar-icon" (click)="activeToggle()" tabindex="0" (keydown.enter)="activeToggle()" (keydown.space)="activeToggle()"></div>
-  <div class="launchbar-seperator right"></div>
-</div>
+.icon {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  background: transparent;
+}
 
-<ng-template [ngIf]="isActive">
-  <div class="launch-widget-popup" tabindex="-1" (keydown)="onKeyDown($event)" #popup>
-    <rs-com-launchbar-menu-item *ngFor="let item of menuItems" [item]="item" (itemClicked)="clicked(item)">
-    </rs-com-launchbar-menu-item>
-  </div>
-  <div class="launch-widget-caret caret-down"></div>
-</ng-template>
+.launch-widget-row {
+  list-style: none;
+  height: 60px;
+  margin: 0px 5px;
+  text-align: left;
+  cursor: pointer;
+}
 
-<!--
+.launch-widget-row .icon {
+  width: 50px;
+  height: 50px;
+}
+
+.launch-widget-row p {
+  margin-left: 60px;
+  line-height: 50px;
+}
+
+:host:focus > .launch-widget-row {
+  background-color: lightblue;
+}
+
+/*
   This program and the accompanying materials are
   made available under the terms of the Eclipse Public License v2.0 which accompanies
   this distribution, and is available at https://www.eclipse.org/legal/epl-v20.html
@@ -31,5 +46,4 @@
   SPDX-License-Identifier: EPL-2.0
 
   Copyright Contributors to the Zowe Project.
--->
-
+*/
