Fixed changes Sean request, z-index is still off though, and boundary checking is only done on the left since the right boundary was not giving the values I expected and not sure why at this time
Signed-off-by: Suneeth Keerthy <skeerthy@rocketsoftware.com>

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-instance-view/launchbar-instance-view.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-instance-view/launchbar-instance-view.component.html
@@ -10,7 +10,9 @@
 <div class="instance-viewer">
   <div class="all-instances-box">
     <div class="instance-item" (mousedown)="clicked(windowId, launchbarItem)" *ngFor="let windowId of windowManager.getWindowIDs(launchbarItem.plugin); let i = index">
+      <div>
       <p class="caption truncate">#{{i}} {{getTitleForWindow(windowId)}}</p>
+      </div>
       <div class="instance-snapshot" (click)="clicked(windowId)" [style.background-color]="black">
         <img class="instance-preview" src={{getPreview(i,launchbarItem)}}/>
       </div> <!-- [style.background-image]="wherever this comes from" -->
