--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-icon/launchbar-icon.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-icon/launchbar-icon.component.html
@@ -9,8 +9,8 @@
   
   Copyright Contributors to the Zowe Project.
 -->
-<div class="launchbar-icon">
-<zowe-launchbar-instance-view *ngIf="launchbarItem.showInstanceView" [launchbarItem]="launchbarItem" (mouseenter)="onMouseEnterInstanceView($event, item)" (mouseleave)="onMouseLeaveInstanceView($event, item)"></zowe-launchbar-instance-view>
+<div class="launchbar-icon" (mouseleave)="onMouseLeaveInstanceView($event, item)">
+<zowe-launchbar-instance-view class="instance" *ngIf="launchbarItem.showInstanceView" [launchbarItem]="launchbarItem" (mouseenter)="onMouseEnterInstanceView($event, item)" (mouseleave)="onMouseLeaveInstanceView($event, item)"></zowe-launchbar-instance-view>
 <p *ngIf="launchbarItem.showIconLabel" class="launchbar-caption truncate">{{launchbarItem.label}}</p>
 <div class="launchbar-icon-image" (mouseenter)="onMouseEnter($event, item)" (mouseleave)="onMouseLeave($event, item)" [title]="launchbarItem.label" [style.background-image]="launchbarItem.image == null ? undefined : launchbarItem.image | cssUrl">
   <div class="launchbar-icon-marker-dots" *ngIf="launchbarItem.instanceCount <= 5">
