--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/window/window.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/window/window.component.css
@@ -32,9 +32,9 @@
   margin: 0;
   padding: 0;
   background-color: #d6d6d6;
-  -webkit-box-shadow: 6px 6px 15px 0px rgba(0, 0, 0, 0.35);
-  -moz-box-shadow:    6px 6px 15px 0px rgba(0, 0, 0, 0.35);
-  box-shadow:         6px 6px 15px 0px rgba(0, 0, 0, 0.35);
+  -webkit-box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  -moz-box-shadow:    0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  box-shadow:         0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   border: 1px solid transparent;
   border-radius: 6px 6px 0 0;
   z-index: 1;
@@ -83,7 +83,13 @@
 }
 
 .window.active .heading {
-  border-bottom: 1px solid blue;
+  background: linear-gradient(to bottom, #f2f2f2 0, #6662e257 100%);
+}
+
+.window.active {
+  -webkit-box-shadow: 0 10px 30px rgba(0,0,0,0.25), 0px 6px 16px rgba(0,0,0,0.25);
+  -moz-box-shadow:    0 10px 30px rgba(0,0,0,0.25), 0px 6px 16px rgba(0,0,0,0.25);
+  box-shadow:         0 10px 30px rgba(0,0,0,0.25), 0px 6px 16px rgba(0,0,0,0.25);
 }
 
 .window .caption {
