--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-instance-view/launchbar-instance-view.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-instance-view/launchbar-instance-view.component.css
@@ -11,7 +11,8 @@
     top: 0px;
     height: 190px;
     padding: 5px 5px 5px 5px;
-    background-color: #334B6B;
+    /*(background-color: #334B6B;*/
+    background-color: rgb(51,75,107, 0.7);
     z-index: 0;
 }
 
@@ -36,7 +37,14 @@
 }
 
 .instance-preview {
+    opacity: 1;
+    transition: .5s ease;
+    backface-visibility: hidden;
     width: 200px;
     height: 120px;
     margin-top: -10px;
+}
+
+.instance-snapshot:hover .instance-preview {
+    opacity: 0.5;
 }
