--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/window/window.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/window/window.component.css
@@ -32,14 +32,13 @@
   margin: 0;
   padding: 0;
   background-color: #d6d6d6;
-  -webkit-box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.19);
-  -moz-box-shadow:    0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.19);
-  box-shadow:         0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.19);
-  border: 1px solid transparent;
   border-radius: 6px 6px 0 0;
   z-index: 1;
   min-width: 180px;
   min-height: 90px;
+  -webkit-box-shadow: 0 0px 13px rgba(0,0,0,0.2);
+  -moz-box-shadow:    0 0px 13px rgba(0,0,0,0.2);
+  box-shadow:         0 0px 13px rgba(0,0,0,0.2);
 }
 
 .window.maximized {
@@ -75,23 +74,23 @@
   width: 100%;
   height: 45px;
   color: #333;
-  /*background-color: #f5f5f5;*/
   border-color: #ddd;
-  background: linear-gradient(to bottom, #f2f2f2 0, #d6d6d6 100%);
+  background: #d5d4ff;
   background-repeat: repeat-x;
   font-size: 14px;
 }
 
 .window.active .heading {
-  background: linear-gradient(to bottom, #f2f2f2 0, #6662e257 100%);
+  background: #455279;
+  color: #a9a9a9;
+  -webkit-filter: brightness(1.8);
+  border-bottom: 1px solid transparent;
 }
 
 .window.active {
-  -webkit-box-shadow: 0 10px 30px rgba(0,0,0,0.25), 0px 6px 16px rgba(0,0,0,0.25);
-  -moz-box-shadow:    0 10px 30px rgba(0,0,0,0.25), 0px 6px 16px rgba(0,0,0,0.25);
-  box-shadow:         0 10px 30px rgba(0,0,0,0.25), 0px 6px 16px rgba(0,0,0,0.25);
-  border-color: #0700d6c7;
-  border-width: 2px;
+  -webkit-box-shadow: 0 0px 25px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow:    0 0px 25px rgba(0, 0, 0, 0.5);
+  box-shadow:         0 0px 25px rgba(0, 0, 0, 0.5);
 }
 
 .window .caption {
@@ -118,7 +117,6 @@
   bottom: 0px;
   overflow: auto;
   background-color: #eeeeee;
-  /* padding: 0; */
 }
 
 .window .border-box-sizing {
