--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/window/window.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/window/window.component.css
@@ -31,14 +31,17 @@
   box-sizing: content-box;
   margin: 0;
   padding: 0;
-  background-color: #d6d6d6;
-  border-radius: 6px 6px 0 0;
+  background-color: #d4d4d6;
   z-index: 1;
   min-width: 180px;
   min-height: 90px;
   -webkit-box-shadow: 0 0px 13px rgba(0,0,0,0.2);
   -moz-box-shadow:    0 0px 13px rgba(0,0,0,0.2);
   box-shadow:         0 0px 13px rgba(0,0,0,0.2);
+  border-color: #d4d4d6;
+  border-width: 3px;
+  border-style: solid;
+  border-radius: 6px 6px 0px 0px;
 }
 
 .window.maximized {
@@ -74,16 +77,12 @@
   width: 100%;
   height: 45px;
   color: #333;
-  border-color: #ddd;
-  background: #d5d4ff;
   background-repeat: repeat-x;
   font-size: 14px;
 }
 
 .window.active .heading {
-  background: #2f4158fc;
-  color: #a9a9a9;
-  -webkit-filter: brightness(1.8);
+  background: #659ff9;
   border-bottom: 1px solid transparent;
 }
 
@@ -91,6 +90,8 @@
   -webkit-box-shadow: 0 0px 25px rgba(0, 0, 0, 0.5);
   -moz-box-shadow:    0 0px 25px rgba(0, 0, 0, 0.5);
   box-shadow:         0 0px 25px rgba(0, 0, 0, 0.5);
+  border-color: #659ff9;
+  background-color: #659ff9;
 }
 
 .window .caption {
@@ -108,6 +109,7 @@
   text-align: center;
   text-overflow: ellipsis;
   white-space: nowrap;
+  color: #171616;
 }
 
 .window .body {
@@ -137,12 +139,12 @@
 }
 
 .maximize-button {
-  left: 64px;
+  left: 73px;
   background-image: url(../../../../assets/images/window/expand-normal.png);
 }
 
 .minimize-button {
-  left: 38px;
+  left: 42px;
   background-image: url(../../../../assets/images/window/minimize-normal.png);
 }
 
