--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-icon/launchbar-icon.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-icon/launchbar-icon.component.css
@@ -54,6 +54,9 @@
   position: absolute;
   width: 60px;
   color: white;
+  background-color: #00000050;
+  padding: 2px;
+  border-radius: 4px;
   font-size: 8pt;
   bottom: 55px;
   left: 0;
