Changes to screen locking & error popup dismissal behavior
Signed-off-by: 1000TurquoisePogs <sgrady@rocketsoftware.com>

--- a/virtual-desktop/src/app/authentication-manager/login/login.component.html
+++ b/virtual-desktop/src/app/authentication-manager/login/login.component.html
@@ -43,7 +43,7 @@
 </div>
 
 <!-- sometimes we may not be able to tell if the user is idle or not, so ask them directly with a popup -->
-<zlux-popup-manager (click)="refreshSession()">
+<zlux-popup-manager>
 </zlux-popup-manager>
 
 <!--
