Added IFrame focus-on-click feature. Windows focus via resize handles too.
Signed-off-by: Leanid Astrakou <lastrakou@rocketsoftware.com>

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/window/window.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/window/window.component.html
@@ -59,7 +59,7 @@
   </div>
 
   <!-- Window resize grips -->
-  <div class="draggable-grips">
+  <div class="draggable-grips" (mousedown)="requestFocus()">
     <div class="grip-w" #w></div>
     <div class="grip-s" #s></div>
     <div class="grip-e" #e></div>
