--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization-panel.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization-panel.component.css
@@ -1,6 +1,6 @@
 
 
-<!-- 
+/*
   This program and the accompanying materials are
   made available under the terms of the Eclipse Public License v2.0 which accompanies
   this distribution, and is available at https://www.eclipse.org/legal/epl-v20.html
@@ -8,17 +8,47 @@
   SPDX-License-Identifier: EPL-2.0
   
   Copyright Contributors to the Zowe Project.
--->
+*/
 
-<ng-container *ngIf="contextMenuDef != null">
-  <com-rs-mvd-context-menu [xPos]="contextMenuDef.xPos" [yPos]="contextMenuDef.yPos" [menuItems]="contextMenuDef.items" (complete)="closeContextMenu()"></com-rs-mvd-context-menu>
-</ng-container>
+.panelOverlay {
+	width:80%;
+	height:80%;
+	background: #557999;
+	opacity: 0.607843;
+	position: absolute;
+	left:10%;
+	top:5%;
+  z-index: 6001;
+}
 
-<rs-com-window-pane></rs-com-window-pane>
-<rs-com-launchbar></rs-com-launchbar>
-<rs-com-personalization-panel *ngIf="windowManager.showPersonalizationPanel"></rs-com-personalization-panel>
+.panelItem {
+  width:200px;
+  height:200px;
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
+  background-image: url('../../../../../../virtual-desktop/src/assets/images/personalization/keyboardSettings.png');
+}
 
-<!-- 
+.panelUl {
+  height:100%;
+  width:100%;
+  padding:50px;
+  overflow: auto;
+  text-align: center;
+}
+
+.panelLi {
+  display:inline-block;
+  padding:2%;
+}
+
+.panelItemSpan {
+  color:white;
+  display:block;
+}
+
+/*
   This program and the accompanying materials are
   made available under the terms of the Eclipse Public License v2.0 which accompanies
   this distribution, and is available at https://www.eclipse.org/legal/epl-v20.html
@@ -26,5 +56,6 @@
   SPDX-License-Identifier: EPL-2.0
   
   Copyright Contributors to the Zowe Project.
--->
+*/
 
+ 
