--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization-panel.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization-panel.component.html
@@ -1,5 +1,3 @@
-
-
 <!-- 
   This program and the accompanying materials are
   made available under the terms of the Eclipse Public License v2.0 which accompanies
@@ -10,13 +8,15 @@
   Copyright Contributors to the Zowe Project.
 -->
 
-<ng-container *ngIf="contextMenuDef != null">
-  <com-rs-mvd-context-menu [xPos]="contextMenuDef.xPos" [yPos]="contextMenuDef.yPos" [menuItems]="contextMenuDef.items" (complete)="closeContextMenu()"></com-rs-mvd-context-menu>
-</ng-container>
 
-<rs-com-window-pane></rs-com-window-pane>
-<rs-com-launchbar></rs-com-launchbar>
-<rs-com-personalization-panel *ngIf="windowManager.showPersonalizationPanel"></rs-com-personalization-panel>
+<div class="panelOverlay">
+    <ul class="nav navbar-horizontal panelUl">
+      <li class="panelLi" *ngFor="let tool of personalizationTools">
+        <img class="panelItem"><br>
+        <span class="panelItemSpan">{{tool.title}}</span>
+      </li>
+    </ul>
+</div>
 
 <!-- 
   This program and the accompanying materials are
@@ -27,4 +27,3 @@
   
   Copyright Contributors to the Zowe Project.
 -->
-
