--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-menu/launchbar-menu.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-menu/launchbar-menu.component.css
@@ -55,21 +55,17 @@
 .launch-widget-row-settings {
   text-align: left;
   cursor: pointer;
-  background-color:#2b5a8c;
 }
 
 .launch-widget-row-settings .icon {
   width: 50px;
   height: 50px;
-  background-repeat: no-repeat;
-  background-position: center;
   background-image: url("../../../../../assets/images/launchbar/settings.png");
 }
 
 .launch-widget-row-settings p {
   margin-left: 60px;
   line-height: 50px;
-  color: white;
 }
 
 
@@ -104,6 +100,11 @@
   background: #dde8f1;
   padding: 30px;
   overflow-y: scroll;
+}
+
+.settingsSeperator {
+  color: #36617a;
+  padding:5px;
 }
 
 .caret-up {
