--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization-panel.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization-panel.component.css
@@ -11,11 +11,13 @@
 */
 
 .panelOverlay {
-	width:100%;
-	height:100%;
+	width:80%;
+	height:80%;
 	background:black;
 	opacity: 0.8;
 	position: absolute;
+	left:10%;
+	top:5%;
   z-index: 6001;
 }
 
