Minor UI changes
Signed-off-by: Suman Appadwedula <sappadwedula@rocketsoftware.com>

--- a/system-apps/app-personalization-window/webClient/src/app/app.component.html
+++ b/system-apps/app-personalization-window/webClient/src/app/app.component.html
@@ -40,7 +40,7 @@
 
           <div class="form-group">
             <button type="submit" class="backgroundFormButton btn btn-primary">Save</button>
-            <button type="submit" class="backgroundFormButton btn btn-primary" (click)="applyBackground(fileName)">Apply</button>
+            <button type="submit" class="backgroundFormButton btn btn-primary" (click)="applyBackground(fileName)">Cancel</button>
           </div>
         </div>
       </form>
