--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/desktop/desktop.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/desktop/desktop.component.html
@@ -16,7 +16,7 @@
 
 <rs-com-window-pane></rs-com-window-pane>
 <rs-com-launchbar></rs-com-launchbar>
-<rs-com-personalization-panel *ngIf="windowManager.showPersonalizationPanel"></rs-com-personalization-panel>
+<rs-com-personalization-panel *ngIf="showPersonalizationPanel"></rs-com-personalization-panel>
 
 <!-- 
   This program and the accompanying materials are
