--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-menu/launchbar-menu.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-menu/launchbar-menu.component.css
@@ -52,17 +52,6 @@
   background: transparent;
 }
 
-.launch-widget-row-settings {
-  text-align: left;
-  cursor: pointer;
-}
-
-.launch-widget-row-settings .icon {
-  width: 50px;
-  height: 50px;
-  background-image: url("../../../../../assets/images/launchbar/settings.png");
-}
-
 .launch-widget-row-settings p {
   margin-left: 60px;
   line-height: 50px;
@@ -102,9 +91,9 @@
   overflow-y: scroll;
 }
 
-.settingsSeperator {
+.launchbar-separator-horizontal {
   color: #36617a;
-  padding:5px;
+  margin-top: 5px;
 }
 
 .caret-up {
@@ -131,7 +120,7 @@
   left: 45px;
 }
 
-.launchbar-seperator {
+.launchbar-separator {
   position: absolute;
   bottom: 0;
   height: 60px;
@@ -139,11 +128,11 @@
   background-color: #36617a;
 }
 
-.launchbar-seperator.right {
+.launchbar-separator.right {
   right: 0;
 }
 
-.launchbar-seperator.left {
+.launchbar-separator.left {
   left: 0;
 }
 
