--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-menu/launchbar-menu.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-menu/launchbar-menu.component.css
@@ -91,9 +91,8 @@
   overflow-y: scroll;
 }
 
-.launchbar-separator-horizontal {
+.launchbar-separator-hor {
   color: #36617a;
-  margin-top: 5px;
 }
 
 .caret-up {
