--- a/system-apps/app-settings-viewer/webClient/src/app/app.component.css
+++ b/system-apps/app-settings-viewer/webClient/src/app/app.component.css
@@ -1,6 +1,6 @@
 
 
-<!-- 
+/*
   This program and the accompanying materials are
   made available under the terms of the Eclipse Public License v2.0 which accompanies
   this distribution, and is available at https://www.eclipse.org/legal/epl-v20.html
@@ -8,17 +8,10 @@
   SPDX-License-Identifier: EPL-2.0
   
   Copyright Contributors to the Zowe Project.
--->
+*/
+ 
 
-<ng-container *ngIf="contextMenuDef != null">
-  <com-rs-mvd-context-menu [xPos]="contextMenuDef.xPos" [yPos]="contextMenuDef.yPos" [menuItems]="contextMenuDef.items" (complete)="closeContextMenu()"></com-rs-mvd-context-menu>
-</ng-container>
-
-<rs-com-window-pane></rs-com-window-pane>
-<rs-com-launchbar></rs-com-launchbar>
-<rs-com-personalization-panel *ngIf="isPersonalizationPanelVisible"></rs-com-personalization-panel>
-
-<!-- 
+/*
   This program and the accompanying materials are
   made available under the terms of the Eclipse Public License v2.0 which accompanies
   this distribution, and is available at https://www.eclipse.org/legal/epl-v20.html
@@ -26,5 +19,5 @@
   SPDX-License-Identifier: EPL-2.0
   
   Copyright Contributors to the Zowe Project.
--->
+*/
 
