--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-menu/launchbar-menu.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-menu/launchbar-menu.component.html
@@ -17,11 +17,11 @@
 
 <ng-template [ngIf]="isActive">
   <div class="launch-widget-popup">
-    <div class="launch-widget-row" (click)="togglePersonalize()">
-        <img class="icon" src="/ZLUX/plugins/org.zowe.zlux.appmanager.app.personalizationwindow/web/assets/settings.png">
+    <!-- <div class="launch-widget-row" (click)="personalizationPanelToggle()">
+        <img class="icon" src="/ZLUX/plugins/org.zowe.zlux.appmanager.app.settingsviewer/web/assets/Settings2.png">
         <p>Preferences</p>
     </div>
-    <hr class="launchbar-separator-horizontal">
+    <hr class="launchbar-separator-hor"> -->
     <div class="launch-widget-row" *ngFor="let item of menuItems" (click)="clicked(item)" (contextmenu)="onRightClick($event, item)">
       <img class="icon" [src]="item.image">
       <p>{{item.label}}</p>
