--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.css
@@ -11,33 +11,43 @@
 */
 
 .launchbar-clock {
-  display: inline-block;
+  float: right;
   position: absolute;
   bottom: 0;
   right: 0;
-  width: 150px;
+  width: fit-content;
   height: 60px;
   z-index: 7;
   color: #eee;
-  padding-left: 20px;
+  padding-left: 18px;
   padding-top: 10px;
-  text-align: left;
+  padding-right: 10px;
+  text-align: right;
 }
 
-.launchbar-user {
-  display: inline-block;
-  float: right;
-  width: 36px;
-  height: 36px;
+.launchbar-tray-icon {
+  float: left;
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
   background: #dde8f1;
-  margin-right: 10px;
-  margin-top: -18px;
-  background-image: url('../../../../../assets/images/launchbar/person.png');
+  margin-top: -16px;
+  margin-right: 7px;
   background-size: 32px 32px;
   background-repeat: no-repeat;
   background-position: center;
   cursor: pointer;
+}
+
+.launchbar-tray-icon.user {
+  background-image: url('../../../../../assets/images/launchbar/person.png');
+  background-size: 26px 26px;
+  margin-right: 13px;
+}
+
+.launchbar-tray-icon.settings {
+  background-image: url('../../../../../assets/images/launchbar/settings.png');
+  background-size: 30px 30px;
 }
 
 .launchbar-user:hover {
