--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-menu/launchbar-menu.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-menu/launchbar-menu.component.html
@@ -18,7 +18,7 @@
 <ng-template [ngIf]="isActive">
   <div class="launch-widget-popup">
     <!-- <div class="launch-widget-row" (click)="personalizationPanelToggle()">
-        <img class="icon" src="/ZLUX/plugins/org.zowe.zlux.appmanager.system.settings-preferences/web/assets/Settings2.png">
+        <img class="icon" src="/ZLUX/plugins/org.zowe.zlux.ng2desktop.settings/web/assets/Settings2.png">
         <p>Preferences</p>
     </div>
     <hr class="launchbar-separator-hor"> -->
