Japanese language word fix, version bump
Signed-off-by: Sean Grady <sgrady@rocketsoftware.com>

--- a/system-apps/system-settings-preferences/webClient/src/app/language/language.component.html
+++ b/system-apps/system-settings-preferences/webClient/src/app/language/language.component.html
@@ -14,7 +14,7 @@
       <button class="language-button" (click)="selectEnglish()" title="{{Select}}">English</button><hr class="language-separator-hor">
       <button class="language-button" (click)="selectChinese()" title="{{Select}}">中文</button><hr class="language-separator-hor">
       <button class="language-button" (click)="selectFrench()" title="{{Select}}">Français</button><hr class="language-separator-hor">
-      <button class="language-button" (click)="selectJapanese()" title="{{Select}}">日本人</button><hr class="language-separator-hor">
+      <button class="language-button" (click)="selectJapanese()" title="{{Select}}">日本語</button><hr class="language-separator-hor">
       <button class="language-button" (click)="selectRussian()" title="{{Select}}">Pусский</button><hr class="language-separator-hor">
       <button class="language-button" (click)="selectGerman()" title="{{Select}}">Deutsch</button><hr class="language-separator-hor">
   </div>
