remove primeng, add typeface-roboto to do the same
Signed-off-by: 1000TurquoisePogs <sgrady@rocketsoftware.com>
Signed-off-by: Todd Wellman <twellman@rocketsoftware.com>

--- a/virtual-desktop/src/assets/css/desktop.css
+++ b/virtual-desktop/src/assets/css/desktop.css
@@ -19,8 +19,10 @@ body {
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
-  width:100%;
-  height:100%;
+}
+
+input div {
+    -webkit-appearance: none;
 }
 
 .desktop {
