Initial commit for notifications

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar/launchbar.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar/launchbar.component.html
@@ -20,6 +20,7 @@
     (mousedown)="onMouseDown($event, item)">
     </rs-com-launchbar-icon>
   </div>
+  <rs-com-launchbar-notifications></rs-com-launchbar-notifications>
   <rs-com-launchbar-widget (popupStateChanged)="onStateChanged($event)"></rs-com-launchbar-widget>
   <div class="launchbar-basement"></div>
 </div>
